# verdi-bench

./: .env.example  .gitignore  .importlinter  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
corpora/groundwork-v0/: README.md  build_tasks.py
deploy/metering-proxy/: README.md  docker-compose.yml  squid.conf
docs/: WALKTHROUGH.md  adapters.md  control-reuse-plan.md  deep-dive.md  engines.md  images.md  usage-guide.md
docs/design/: flagship-runbook.md  integration-execution-report.md  mechanism-decomposition-program.md  operator-ui.md  shakedown.md  ux-friction.spec.md  verdi-go-integration-plan.md  workspace-observability-plan.md  workspace-trajectory-schema-draft.md
harness/: _entrypoint_fixtures.py  cli.py  cli_common.py  entrypoints.py  errors.py  http_guard.py  version.py
harness/adapters/: __init__.py  base.py  claude_code.py  codex.py  generic.py  otlp.py
harness/analyze/: api.py  card.py  ci.py  cli.py  confounds.py  dossier.py  effect.py  fence.py  nullsim.py  report.py  selfcheck.py  stats.py  timeline.py
harness/author/: __init__.py  cli.py  page.py  server.py
harness/blind/: core.py
harness/contamination/: __init__.py  api.py  canary.py  channels.py  cli.py  dating.py  overlap.py  probe.py  scan.py  summary.py
harness/corpus/: admit.py  api.py  attestation.py  benchmarks.py  cli.py  commit.py  ledger_ops.py  manifest.py  materialize.py  mine.py  public.py  registry.py  stratify.py
harness/forensics/: __init__.py  api.py  assembler.py  calibration.py  (+6 more)
scripts/: funnel_metrics.py
tests/: ac_coverage.py  test_ac_hook.py  test_analyze_card.py  test_analyze_ci.py  test_author_preview_parity.py  test_browser_ci_guard.py  test_cli_common.py  test_cli_stage_registration.py  test_control_reuse_analyze.py  test_control_reuse_bundle.py  test_control_reuse_cli.py  test_control_reuse_events.py  test_control_reuse_fingerprint.py  test_control_reuse_import.py  test_control_reuse_judge.py  test_control_reuse_review_fixes.py  test_corpus_benchmarks.py  test_corpus_groundwork_v0.py  test_corpus_manifest.py  test_detector_fixture_coverage.py  test_e2e_harbor.py  test_e2e_harbor_kill.py  test_e2e_managed_proxy.py  test_e2e_metering_proxy.py  test_e2e_otlp_capture.py  test_e2e_otlp_trajectory.py  test_e2e_pipeline.py  test_e2e_plugin_isolation.py  test_e2e_reverse_egress.py  test_e2e_run_holdouts.py  test_environment_spec.py  test_eval10_canary.py  test_eval10_cli.py  test_eval10_contracts.py  test_eval10_dating.py  test_eval10_findings.py  test_eval10_overlap.py  test_eval10_probe.py  test_eval10_scan.py  test_eval11_detectors.py  (+125 more)
(+720 files in other folders)
