[project]
name = "verdi-bench"
version = "0.1.0"
description = "Benchmark-grade A/B evaluation instrument for agent stacks"
readme = "README.md"
# Spec binds Python 3.12+; this dev environment only has 3.11 available
# (the 3.12 standalone build is unreachable behind the proxy), so we relax
# the floor to 3.11 for local work while keeping the code 3.12-compatible.
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "numpy>=1.26",
    "jinja2>=3.1",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
# In-trial OTLP protobuf span decoding [refactor 09 §5, A14]. Optional so a
# JSON-only install stays lean; a protobuf envelope encountered without it raises
# a loud, actionable OtlpDependencyError (harness/hermetic/otlp_decode.py). The
# import is lazy — nothing here is pulled unless a protobuf body is decoded.
otlp = [
    "opentelemetry-proto>=1.20,<2",
    "protobuf>=4,<6",
]

[project.scripts]
bench = "harness.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "import-linter>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a live Docker daemon (deselect with '-m \"not docker\"')",
    "browser: tests that drive the served page in a real Chromium via node playwright (the CI browser job runs '-m browser' under VERDI_REQUIRE_BROWSER=1)",
]
